# OpenGLStudy

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  glwidget.cpp  glwidget.h  main.cpp
include/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h  geometry.h  glwidget.h  mesh.h  object.h  scene.h
include/camera/: camera.h  orthographicCamera.h  perspectiveCamera.h  perspectiveGameCamera.h
include/light/: ambientLight.h  directionalLight.h  light.h  pointLight.h  spotLight.h
include/material/: depthMaterial.h  material.h  phongMaterial.h  textureManager.h  whiteMaterial.h
include/renderer/: renderer.h
include/tools/: assimpLoader.h  tools.h
resource/: fragment.glsl  vertex.glsl
resource/shaders/depthShader/: fragment.glsl  vertex.glsl
resource/shaders/phongShader/: fragment.glsl  vertex.glsl
resource/shaders/whiteShader/: fragment.glsl
src/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  geometry.cpp  glwidget.cpp  mesh.cpp  object.cpp  perspectiveGameCamera.cpp  scene.cpp
src/camera/: camera.cpp  orthographicCamera.cpp  perspectiveCamera.cpp  perspectiveGameCamera.cpp
src/light/: ambientLight.cpp  directionalLight.cpp  light.cpp  pointLight.cpp  spotLight.cpp
src/material/: depthMaterial.cpp  material.cpp  phongMaterial.cpp  textureManager.cpp  whiteMaterial.cpp
src/renderer/: renderer.cpp
src/tools/: assimpLoader.cpp  tools.cpp
